# flikk-tauri

./: README.md  biome.json  bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: app.tsx  context.tsx  fonts.css  index.css  index.tsx  radix-colors.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: login_handler.rs  main.rs  traffic.rs
src-tauri/src/mac/: window.rs
src/components/common/: badges.tsx  button.tsx  header.tsx  input.tsx  sidebar.tsx
src/components/home/: live-card.tsx
src/components/icons/: chzzk.tsx  phosphor.tsx  soop.tsx  twitch.tsx  types.d.ts
src/components/player/: details.tsx
src/components/sidebar/: category.tsx  login.tsx
src/lib/: chzzk-login.ts  chzzk.ts  soop.ts  types.d.ts
src/routes/: categories.tsx  home.tsx  player.tsx  videos.tsx  vod.tsx
