[package]
name = "flikk"
version = "0.0.1"
authors = ["David Lee"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc = "0.2.7"
rand = "0.8.5"
cocoa = "0.25.0"
tauri-plugin-decorum = "0.1.0"
window-vibrancy = "0.5.0"
