[package]
name = "flikk"
version = "0.0.1"
authors = ["David Lee"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
objc = "0.2.7"
cocoa = "0.25.0"
window-vibrancy = "0.5.0"
serde_json = "1.0.117"
